<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Market Intel</string>
    <string name="action_settings">Settings</string>
    <string name="ScanProgressText">24/60 Items Scanned at **Store Location**</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="usercontrol">User Control</string>
    <string name="productcontrol">Product Control</string>
    <string name="storecontrol">Store Control</string>
    <string name="title_activity_user_control">User Control</string>
    <string name="create_user">Create a User</string>
    <string name="delete_user">Delete a User</string>
    <string name="view_all_users">View All Users</string>
    <string name="title_activity_product_control">Product Control</string>
    <string name="add_product">Add a Product</string>
    <string name="delete_product">Delete a Product</string>
    <string name="add_store">Add a Store</string>
    <string name="delete_store">Delete a Store</string>
    <string name="view_all_stores">View all Stores</string>
    <string name="title_activity_store_control">Store Control</string>
    <string name="title_activity_add_product">Add a Product</string>
    <string name="cancel">Cancel</string>
    <string name="addproduct">Add Product</string>
    <string name="update">Update</string>
    <string name="title_activity_delete_product">Delete Product</string>
    <string name="title_activity_add_store">Add a Store</string>
    <string name="spinner_prompt">Store</string>

    <string-array name="capitals_array">
        <item>St. Andrew</item>
        <item>Manchester</item>
        <item>St. Ann</item>
        <item>St. thomas</item>
        <item>Portland</item>
        <item>Westmorland</item>
        <item>St. Elizabeth</item>
        <item>St. James</item>
        <item>Clarendon</item>
        <item>Trelawny</item>
        <item>Hanover</item>
        <item>St. Mary</item>
        <item>St. Catherine</item>
        <item>Kingston</item>
        <item>Mandeville</item>
        <item>Ocho Rios</item>
        <item>Morant Bay</item>
        <item>Port Antonio</item>
        <item>Savanna-La-Mar</item>
        <item>Black River</item>
        <item>Montego Bay</item>
        <item>May Pen</item>
        <item>Falmouth</item>
        <item>Lucea</item>
        <item>Port Maria</item>
        <item>Spanish Town</item>
        <item>Portmore</item>
    </string-array>
    <string-array name="userRoles_array">
        <item>Manager</item>
        <item>Merchandiser</item>
    </string-array>
    <string-array name="discValues_array">
        <item>% Off Item</item>
        <item>$ Off Item</item>
    </string-array>

    <string name="title_activity_add_discount_product">Add Discounted Product</string>
    <string name="title_activity_add_banded_offer">Add Banded Offer</string>
    <string name="title_activity_in_store_sampling">Add Product Sampling</string>
    <string name="title_activity_suggestion_box">Add Suggestion</string>
    <string name="title_activity_delete_in_store_sample">Delete Product Sampling</string>
    <string name="title_activity_delete_discount_product">Delete Discounted Product</string>
    <string name="title_activity_delete_suggestion_box">Delete Suggestion</string>
    <string name="title_activity_promotions">Store Promotions</string>
    <string name="title_activity_new_products_control">New Product Options</string>
    <string name="title_activity_discounted_products_control">Discounted Product Options</string>
    <string name="title_activity_banded_products_control">Banded Products Options</string>
    <string name="title_activity_instore_sampling_control">Instore Sampling Options</string>
    <string name="title_activity_feedback_control">Expired Product Options</string>
    <string name="title_activity_suggestion_control">Suggestion Options</string>

</resources>