<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    tools:context=".UserControl">

    <Button android:drawableLeft= "@drawable/ic_action_person"        	
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:id="@+id/adduserbutton"
        	android:text="@string/create_user" 
        	android:background="#ffffff"        	
        	android:paddingLeft="30dp"
        	android:paddingRight="16dp"
        	android:paddingTop="16dp"
        	android:paddingBottom="16dp"        	
        	android:drawablePadding="-155dp"/>
    
    <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#c0c0c0"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"/>
    
    <Button android:drawableLeft= "@drawable/ic_action_person"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"       	 	
        	android:id="@+id/deleteuserbutton"
        	android:text="@string/delete_user" 
        	android:background="#ffffff"
        	android:paddingLeft="30dp"
        	android:paddingRight="16dp"
        	android:paddingTop="16dp"
        	android:paddingBottom="16dp"
        	android:drawablePadding="-155dp"/>
    
     <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#c0c0c0"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"/>
    
    <Button android:drawableLeft= "@drawable/ic_action_person"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"       	 	
        	android:id="@+id/viewallusersbutton"
        	android:text="@string/view_all_users" 
        	android:background="#ffffff"
        	android:paddingLeft="30dp"
        	android:paddingRight="16dp"
        	android:paddingTop="16dp"
        	android:paddingBottom="16dp"
        	android:drawablePadding="-150dp"/>
    
     <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#c0c0c0"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"/>

</LinearLayout>
